Do some changes in the descriptions.

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Addict Hawk — Premium Leather Manufacturing</title>
+    <title>Hawk Exports — Premium Leather Manufacturing</title>
     <meta
       name="description"
-      content="Premium leather manufacturing for luxury brands. Expert craftsmanship since 1985: handbags, automotive, furniture, accessories."
+      content="Premium leather manufacturing for footwear, sports goods, furniture upholstery, and fashion accessories. Expert craftsmanship from Jalandhar, Punjab."
     />
     <meta name="robots" content="index,follow" />
     <meta name="theme-color" content="#92400E" />
@@ -16,26 +16,26 @@
     <!-- Open Graph -->
     <meta
       property="og:title"
-      content="Addict Hawk — Premium Leather Manufacturing"
+      content="Hawk Exports — Premium Leather Manufacturing"
     />
     <meta
       property="og:description"
-      content="Trusted partner for luxury leather goods: handbags, automotive, furniture, accessories."
+      content="Premium leather manufacturing for footwear, sports goods, furniture upholstery, and fashion accessories from Jalandhar, Punjab."
     />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://your-domain.com/" />
     <meta property="og:image" content="/og-image.jpg" />
-    <meta property="og:site_name" content="Addict Hawk" />
+    <meta property="og:site_name" content="Hawk Exports" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Addict Hawk — Premium Leather Manufacturing"
+      content="Hawk Exports — Premium Leather Manufacturing"
     />
     <meta
       name="twitter:description"
-      content="Premium leather manufacturing since 1985. Expert craftsmanship for luxury brands."
+      content="Premium leather manufacturing for footwear, sports goods, furniture upholstery, and fashion accessories from Jalandhar, Punjab."
     />
     <meta name="twitter:image" content="/og-image.jpg" />
 
@@ -44,7 +44,7 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "name": "Addict Hawk",
+        "name": "Hawk Exports",
         "url": "https://your-domain.com/",
         "logo": "https://your-domain.com/logo.png",
         "sameAs": [
@@ -54,7 +54,9 @@
         ],
         "address": {
           "@type": "PostalAddress",
+          "streetAddress": "74-C, Leather Complex",
           "addressLocality": "Jalandhar",
+          "postalCode": "144021",
           "addressRegion": "Punjab",
           "addressCountry": "IN"
         },
@@ -62,8 +64,14 @@
           {
             "@type": "ContactPoint",
             "contactType": "sales",
-            "telephone": "+91-055-123-4567",
-            "email": "info@leathercraft.com"
+            "telephone": "+919872664468",
+            "email": "hawkexports@gmail.com"
+          },
+          {
+            "@type": "ContactPoint",
+            "contactType": "support",
+            "telephone": "+917696300088",
+            "email": "hawkexports@gmail.com"
           }
         ]
       }
@@ -72,7 +80,7 @@
       {
         "@context": "https://schema.org",
         "@type": "WebSite",
-        "name": "Addict Hawk",
+        "name": "Hawk Exports",
         "url": "https://your-domain.com/",
         "potentialAction": {
           "@type": "SearchAction",
