Replace AOS with Framer Motion for animations
Removed AOS and its dependencies, refactored all sections to use Framer Motion and custom animation components for improved performance and accessibility. Updated meta tags and structured data for SEO, and enhanced UI consistency across About, Contact, Footer, Header, Hero, Process, and Products sections.

--- a/index.html
+++ b/index.html
@@ -3,54 +3,69 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Hawk Exports — Premium Leather Manufacturing</title>
+    <title>Hawk Exports — Premium Leather Manufacturing Since 1999</title>
     <meta
       name="description"
-      content="Premium leather manufacturing for footwear, sports goods, furniture upholstery, and fashion accessories. Expert craftsmanship from Jalandhar, Punjab."
+      content="Hawk Exports specializes in premium leather manufacturing for footwear, sports goods, furniture upholstery, and fashion accessories. ISO certified quality with 25+ years of experience from Jalandhar, Punjab."
+    />
+    <!-- Keywords for Search Engine Optimization -->
+    <meta
+      name="keywords"
+      content="leather manufacturing, footwear leather, sports goods leather, furniture upholstery leather, leather supplier, premium leather products, leather exports, Jalandhar leather, leather goods manufacturer, fashion accessories leather, leather craftsmanship, industrial leather, bulk leather supplier, leather tanning, leather quality"
     />
     <meta name="robots" content="index,follow" />
     <meta name="theme-color" content="#92400E" />
-    <!-- Canonical: update to your production domain -->
-    <link rel="canonical" href="https://your-domain.com/" />
+    <meta name="author" content="Hawk Exports" />
+    <meta name="publisher" content="Hawk Exports" />
+    <!-- Additional SEO Meta Tags -->
+    <meta name="subject" content="Premium Leather Manufacturing and Supply" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7" />
+    <meta name="distribution" content="global" />
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
 
     <!-- Open Graph -->
     <meta
       property="og:title"
-      content="Hawk Exports — Premium Leather Manufacturing"
+      content="Hawk Exports — Premium Leather Manufacturing Since 1999"
     />
     <meta
       property="og:description"
-      content="Premium leather manufacturing for footwear, sports goods, furniture upholstery, and fashion accessories from Jalandhar, Punjab."
+      content="Expert leather manufacturing for footwear, sports goods, furniture upholstery, and fashion accessories. ISO certified quality with 25+ years of experience from Jalandhar, Punjab."
     />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://your-domain.com/" />
-    <meta property="og:image" content="/og-image.jpg" />
+    <meta property="og:url" content="https://hawkexports.com/" />
+    <meta property="og:image" content="https://hawkexports.com/og-image.jpg" />
     <meta property="og:site_name" content="Hawk Exports" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta
       name="twitter:title"
-      content="Hawk Exports — Premium Leather Manufacturing"
+      content="Hawk Exports — Premium Leather Manufacturing Since 1999"
     />
     <meta
       name="twitter:description"
-      content="Premium leather manufacturing for footwear, sports goods, furniture upholstery, and fashion accessories from Jalandhar, Punjab."
+      content="Expert leather manufacturing for footwear, sports goods, furniture upholstery, and fashion accessories. ISO certified quality with 25+ years of experience from Jalandhar, Punjab."
     />
-    <meta name="twitter:image" content="/og-image.jpg" />
-
+    <meta name="twitter:image" content="https://hawkexports.com/og-image.jpg" />
+    <meta name="twitter:site" content="@hawkexports" />
     <!-- JSON-LD Structured Data -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Organization",
         "name": "Hawk Exports",
-        "url": "https://your-domain.com/",
-        "logo": "https://your-domain.com/logo.png",
+        "url": "https://hawkexports.com/",
+        "logo": "https://hawkexports.com/logo.png",
+        "description": "Premium leather manufacturing for footwear, sports goods, furniture upholstery, and fashion accessories",
+        "foundingDate": "1999",
         "sameAs": [
-          "https://www.instagram.com/",
-          "https://www.linkedin.com/",
-          "https://twitter.com/"
+          "https://www.instagram.com/hawkexports",
+          "https://www.linkedin.com/company/hawk-exports",
+          "https://twitter.com/hawkexports"
         ],
         "address": {
           "@type": "PostalAddress",
@@ -65,13 +80,13 @@
             "@type": "ContactPoint",
             "contactType": "sales",
             "telephone": "+919872664468",
-            "email": "hawkexports@gmail.com"
+            "email": "addicthawk9@gmail.com"
           },
           {
             "@type": "ContactPoint",
             "contactType": "support",
             "telephone": "+917696300088",
-            "email": "hawkexports@gmail.com"
+            "email": "addicthawk9@gmail.com"
           }
         ]
       }
@@ -81,12 +96,55 @@
         "@context": "https://schema.org",
         "@type": "WebSite",
         "name": "Hawk Exports",
-        "url": "https://your-domain.com/",
+        "url": "https://hawkexports.com/",
         "potentialAction": {
           "@type": "SearchAction",
-          "target": "https://your-domain.com/?q={search_term_string}",
+          "target": "https://hawkexports.com/?q={search_term_string}",
           "query-input": "required name=search_term_string"
         }
+      }
+    </script>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "LocalBusiness",
+        "name": "Hawk Exports",
+        "image": "https://hawkexports.com/logo.png",
+        "description": "Premium leather manufacturing company specializing in footwear, sports goods, furniture upholstery, and fashion accessories",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "74-C, Leather Complex",
+          "addressLocality": "Jalandhar",
+          "postalCode": "144021",
+          "addressRegion": "Punjab",
+          "addressCountry": "IN"
+        },
+        "telephone": "+919872664468",
+        "email": "addicthawk9@gmail.com",
+        "url": "https://hawkexports.com/",
+        "priceRange": "$$",
+        "areaServed": "IN",
+        "openingHoursSpecification": [
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+              "Monday",
+              "Tuesday",
+              "Wednesday",
+              "Thursday",
+              "Friday",
+              "Saturday"
+            ],
+            "opens": "09:00",
+            "closes": "18:00"
+          },
+          {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": "Sunday",
+            "opens": "00:00",
+            "closes": "00:00"
+          }
+        ]
       }
     </script>
   </head>
